# rust-plugify

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE
.github/: release-please-config.json
.github/workflows/: cmake-multiple-platform.yml
src/: lib.rs  mat4x4.rs  plugin.rs  string.rs  variant.rs  vec2.rs  vec3.rs  vec4.rs  vector.rs
